# graphics-open-gl-lab-1

./: CMakeLists.txt  README.md  main.cpp
